--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
             class="block uppercase text-slate-600 text-xs font-bold mb-2"
             for="photo"
           >
-            Your Photo
+            Your Photo | صورتك
           </label>
 
           <input
@@ -44,7 +44,7 @@
             class="block uppercase text-slate-600 text-xs font-bold mb-2"
             for="opacity"
           >
-            Opacity
+            Opacity | الشفافية
           </label>
 
           <input
@@ -71,7 +71,7 @@
       bg-slate-800 text-white active:bg-slate-600 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150
       disabled:bg-slate-400 disabled:transition-none disabled:shadow-transparent disabled:cursor-no-drop
 ">
-          Generate
+          Generate | توليد
         </button>
 
         <button
@@ -80,7 +80,7 @@
       bg-slate-800 text-white active:bg-slate-600 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150
       disabled:bg-slate-400 disabled:transition-none disabled:shadow-transparent disabled:cursor-no-drop
 ">
-          Download & Save
+          Save | حفظ
         </button>
       </div>
 
