--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="px-24 bg-zinc-200 min-h-full">
+<div class="px-2 lg:px-24 bg-zinc-200 min-h-full">
   <form [formGroup]="form" class="grid grid-cols-1 gap-5 p-5">
     <div class="m-auto text-slate-500 text-sm font-bold text-center">
       <p dir="rtl">
@@ -12,7 +12,7 @@
       </p>
     </div>
 
-    <div class="grid grid-cols-2 gap-16">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
       <div class="grid grid-cols-1 gap-5">
         <div>
 
