--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="px-2 lg:px-24 bg-zinc-200 min-h-full">
+<div class="px-2 lg:px-24 bg-zinc-200 min-h-full min-w-full">
   <form [formGroup]="form" class="grid grid-cols-1 gap-5 p-5">
     <div class="m-auto text-slate-500 text-sm font-bold text-center">
       <p dir="rtl">
